welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:5: error: reassignment to val
		if (die1=6 && !die2=6)
                        ^withoutDoubles:7: error: reassignment to val
			die1=1
                            ^withoutDoubles:9: error: reassignment to val
		} else if (die2=6 && !die1=6)
                               ^withoutDoubles:11: error: reassignment to val
			die2=1
                            ^withoutDoubles:15: error: reassignment to val
			return (die1=die1+1 || die2=die2+1)
                                    ^